--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
+    "axios": "^1.7.9",
     "html2canvas": "^1.4.1",
     "moment": "^2.30.1",
     "react": "^18.3.1",
@@ -43,6 +44,7 @@
       "last 1 safari version"
     ]
   },
+  "proxy": "https://ecf0-59-9-220-5.ngrok-free.app",
   "devDependencies": {
     "tailwindcss": "^3.4.16"
   }
