--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "html2canvas": "^1.4.1",
+    "imagemin": "^9.0.0",
+    "imagemin-webp": "^8.0.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-calendar": "^5.1.0",
@@ -21,6 +23,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "prebuild": "node convertToWebP.mjs",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
